Production Configuration: Migrate to Supabase-only setup
- Remove all local development/testing components
- Configure production Supabase PostgreSQL database
- Update Discord bot for global deployment
- Remove problematic chatbot module with missing dependencies
- Fix OAuth configuration for Supabase Auth
- Update environment variables for production use
- Remove SQLite references and local testing files
- All 7/7 production tests passing
- Ready for Discord server deployment

--- a/alembic.ini
+++ b/alembic.ini
@@ -1,6 +1,7 @@
 [alembic]
 script_location = alembic
-sqlalchemy.url = sqlite+aiosqlite:///./events_agent.db
+# Database URL will be loaded from .env file
+# sqlalchemy.url = postgresql+asyncpg://postgres:password@host:port/database
 
 [loggers]
 keys = root,sqlalchemy,alembic
