refactor: Convert from mixed OAuth to pure Supabase OAuth
- Remove manual Google OAuth callback route (/auth/callback)
- Remove client_secret.json dependencies from Docker
- Clean up documentation to focus on Supabase OAuth only
- Update .env configuration for Supabase-managed OAuth
- Add SUPABASE_OAUTH_SETUP.md guide
- Remove manual token exchange code
- Simplify OAuth flow to use only Supabase providers

--- a/.env.example
+++ b/.env.example
@@ -20,7 +20,7 @@ HTTP_PORT=8000
 # Generate a Fernet key using Python cryptography library
 FERNET_KEY=
 
-# Google OAuth Configuration
+# Google OAuth Configuration (Optional - configure in Supabase Auth dashboard instead)
+# Only needed if using Google APIs outside of Supabase OAuth
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
-OAUTH_REDIRECT_URI=http://localhost:8000/oauth/callback
